# url-shortener

./: .env.example  .gitignore  pyproject.toml
app/: config.py  exceptions.py  main.py
app/algorithms/: base62.py
app/api/: dependencies.py  schemas.py
app/api/routes/: urls.py
app/domain/: memory.py  models.py  repositories.py  services.py
docs/: phase01.md  phase02.md  phase03.md  phase04.md  phase05.md  why_this_project.md
tests/: conftest.py  test_base62.py  test_health.py  test_repository.py  test_routes.py  test_services.py
